# OwnBoard

./: .gitignore  CLAUDE.md  Makefile  PRODUCT.md  README.md  package-lock.json
.cursor/: hooks.json
backend/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0d9d425d9e66_add_organization_table_and_tenant_.py  1bd454bb2a82_add_project_knowledge_base_docs_is_.py  28e10062c42d_add_doc_pack_rag_tables.py  5a085e65cf2b_add_track_audience_and_auto_assign.py  77bde8f0a115_add_doc_pack_quiz_workflow_fields.py  81a4fe985f7a_add_doc_pack_assign_scope_for_project_.py  9ce7a0813a6e_add_team_leads_project_repos_context_.py  9e57e0476019_add_quiz_question_source_document.py  a1b2c3d4e5f6_add_employee_clerk_user_id.py  a3f1c9d27e40_project_lifecycle_status_and_archive_flag.py  a42049ac344b_add_project_repo_member_for_repo_member_.py  a8c9d0e1f2b3_add_org_domain.py  b1c2d3e4f5a6_add_quiz_domain.py  b2d5e8c31f47_add_project_document_repo.py  b7f3c2a19d84_add_projects.py  c1d2e3f4a5b6_add_ingest_key_and_code_chunk_hnsw.py  c4e7a1b93d02_add_project_module_union_targeting.py  c4f8a2b91d03_add_doc_pack_document_created_by.py  d2e3f4a5b6c7_add_quiz_template_open_book.py  d4a9f1c62b08_add_doc_pack_document_description.py  dcc57c67553f_initial_schema.py  e7d1f4b820aa_add_doc_pack_document_ingest_attempts.py  (+2 more)
backend/onboard/: main.py
backend/scripts/: check_connections.py
backend/tests/: conftest.py  test_doc_pack_rag.py  test_ingest_pipeline.py  test_project_service.py  test_repo_service.py
(+728 files in other folders)
