[project]
name = "onboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.139.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "supabase>=2.31.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
dev = "onboard.main:dev"
start = "onboard.main:run"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP046", "UP042"]

[tool.ruff.lint.per-file-ignores]
"onboard/dao/models/*.py" = ["F821"]
"alembic/versions/*.py" = ["E501", "I001", "UP035", "UP007"]
# Prompt/spec-definition files: long natural-language tool descriptions + system prompts read best unwrapped.
"onboard/services/project_chat/project_chat_service.py" = ["E501"]
"onboard/services/admin_assistant/admin_assistant_service.py" = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["onboard"]
